# rustform

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: cd.yml  ci.yml
pkg/: LICENSE_MIT  package.json  rustform.js  rustform_bg.wasm
src/: lib.rs
