[package]
name = "rustform"
version = "0.1.0"
authors = ["Mark Temple-Heald <mtempleheald@hotmail.com>"]
description = "Investigation into an enterprise without JavaScript"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/mtempleheald/rustform"

# cdylib for wasm, rlib for unit testing
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
# debug panics using `console.error`, not great for code size
console_error_panic_hook = { version = "0.1.6", optional = true }
# `wee_alloc` - tiny allocator for wasm that ~1K code size not ~10k, but slower
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.48"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Text',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
# for running locally without external dependencies like bundlers
https = "1.11.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

